[package]
name = "statusphere-serverless"
version = "0.1.0"
edition = "2021"
authors = [ "Inanna Malick <inanna@recursion.wtf>" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version="0.5.0", features = [ "http", "d1" ]}
worker-macros = { version="0.5.0" }
console_error_panic_hook = { version = "0.1.1" }


futures = "0.3"

askama = "0.13"
anyhow = "1.0.97"
async-trait = "0.1.88"
atrium-common = "0.1.1"
atrium-api = { version = "0.25.0", default-features = false, features = ["namespace-appbsky"]}
atrium-identity = "0.1.3"
atrium-oauth = "0.1.0"
axum = {version ="0.8.3", features = [ "macros", "form", "query", "json"], default-features = false}
axum-extra = {version = "0.10", features = ["typed-header"]}
chrono = {version = "0.4.40", default-features = false}
headers = "0.4.0"
http = "1.3.1"
reqwest-wasm = { version = "0.11.16", features = [ "json" ] } 
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["arbitrary_precision"]}
thiserror = "2.0.12"
tokio = { version = "1", default-features = false, features = ["macros"] }
tower = "0.5.2"
tower-sessions = "0.14"

# not used directly but we need to enable the js feature
getrandom = { version = "0.2.15", features = ["js"] }
# not used directly but we need to enable the wasm-bindgen feature
time = {version = "0.3.41", features = ["wasm-bindgen"]}
serde-wasm-bindgen = "0.6.5"
atrium-xrpc = "0.12.2"

[build-dependencies]
askama = "0.13"

[profile.dev.package.askama_derive]
opt-level = 3
